tests/ui/stability-attribute/issue-28075.stderr
error[E0658]: use of unstable library feature `unstable_test_feature`
  --> $DIR/issue-28075.rs:9:22
   |
LL | use lint_stability::{unstable, deprecated};
   |                      ^^^^^^^^
   |
   = help: add `#![feature(unstable_test_feature)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
